# mod3

./: .gitignore  PLAN_MAESTRO.md  README.md  Taskfile.yml  package-lock.json  package.json
curso6/dia2/proyectos/ml-data-quality-lab/: .gitignore  README.md  pyproject.toml
curso6/dia2/proyectos/ml-data-quality-lab/.github/workflows/: quality.yml
curso6/dia2/proyectos/ml-data-quality-lab/scripts/: run_tests.sh
curso6/dia2/proyectos/ml-data-quality-lab/src/: __init__.py  data_quality.py  generate_data.py  model_checks.py  run_pipeline.py
curso6/dia2/proyectos/ml-data-quality-lab/tests/: test_data_quality.py  test_gx_integration.py  test_model_checks.py
proyecto-integrador/api-lab/: conftest.py  pyproject.toml
proyecto-integrador/api-lab/client/: api_client.py
proyecto-integrador/api-lab/data/: posts_payloads.json  update_cases.yaml
proyecto-integrador/api-lab/tests/: test_data_driven.py  test_posts_crud.py  test_reto_users.py  test_smoke_httpx.py
proyecto-integrador/design-lab/: pyproject.toml
proyecto-integrador/design-lab/data/: decision_table.yaml
proyecto-integrador/design-lab/design_lab/: __init__.py  discount.py  pairwise_matrix.py
proyecto-integrador/design-lab/tests/: test_decision_table.py  test_equivalence_boundary.py  test_pairwise.py
proyecto-integrador/ui-lab/: conftest.py  pyproject.toml
proyecto-integrador/ui-lab/data/: products.yaml  users.json
proyecto-integrador/ui-lab/pages/: __init__.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py
proyecto-integrador/ui-lab/screenplay/: __init__.py  actor.py
proyecto-integrador/ui-lab/screenplay/abilities/: __init__.py  browse_web.py
proyecto-integrador/ui-lab/screenplay/tasks/: __init__.py  add_to_cart.py  complete_checkout.py  login.py
proyecto-integrador/ui-lab/tests/: test_checkout_pom.py  test_checkout_screenplay.py  test_data_driven.py  test_login_pom.py  test_login_screenplay.py
(+64 files in other folders)
