[project]
name = "ui-lab"
version = "0.1.0"
description = "Sesión 2 — laboratorio de UI: POM, Screenplay y Data-Driven Testing sobre SauceDemo"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "playwright>=1.44.0",
    "pytest>=8.2.0",
    "pytest-playwright>=0.5.0",
    "pyyaml>=6.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --tb=short"
