[project]
name = "ml-data-quality-lab"
version = "0.1.0"
description = "Reto 2: testing de datos ETL y modelo ML (Great Expectations + MLflow)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "great-expectations>=1.3.0",
  "mlflow>=2.18.0",
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
